# autonomous-content-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: history.json  sources.json
docs/: architecture.md
docs/adr/: 001-use-langgraph.md  002-local-inference-vllm.md
src/content_agents/: main.py
src/content_agents/agents/: collector.py  critic.py  editor.py  publisher.py  writer.py
src/content_agents/core/: config.py  llm.py  logger.py  utils.py
src/content_agents/graph/: state.py  workflow.py
src/content_agents/schemas/: data_types.py
src/content_agents/services/: history.py  news_fetcher.py  twitter_client.py
tests/integration/: test_collector.py  test_full_graph.py  test_twitter_api.py  test_vision_smoke.py  test_writer.py
tests/unit/: test_schemas.py
tests/unit/core/: test_llm_factory.py
