[project]
name = "autonomous-content-agents"
version = "0.1.0"
description = "Autonomous multi-agent system for content generation and publishing on X (Twitter)."
authors = [{ name = "Vitaliy Babchuk", email = "babchuk.vit@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "langgraph>=0.2.0",           
    "langchain>=0.2.0",
    "openai>=1.0.0",    
    "langchain-community>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tweepy>=4.14.0",   
    "feedparser>=6.0.10",       
    "beautifulsoup4>=4.12.0",     
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0", 
    "tenacity>=8.2.0",  
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",        
    "mypy>=1.10.0",      
    "pre-commit>=3.7.0",
    "jupyterlab>=4.1.0",         
    "ipykernel>=6.29.0",
    "types-requests>=2.31.0",    
    "types-beautifulsoup4>=4.12.0",
]

[tool.uv]
# UV specific settings if needed in future

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort 
    "B",   # flake8-bugbear 
    "C4",  # flake8-comprehensions 
    "UP",  # pyupgrade 
    "SIM", # flake8-simplify 
]
ignore = ["E501"] 

[tool.mypy]
python_version = "3.12"
strict = true      
ignore_missing_imports = true  
disallow_untyped_defs = true   

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]           
testpaths = ["tests"]